add some welcome text, disable rule saving since this doesnt yet work

--- a/package.json
+++ b/package.json
@@ -128,6 +128,12 @@
 				]
 			}
 		],
+		"viewsWelcome": [
+		  {
+			"view": "sourcery.rules.treeview",
+			"contents": "Develop new Sourcery rules or perform powerful pattern based search/replace of your codebase.\n[Documentation](https://docs.sourcery.ai/Reference/Custom-Rules/pattern-syntax/#custom-rule-pattern-syntax)\n"
+		  }
+		],
 		"commands": [
 			{
 				"command": "sourcery.login",
