draft of functionality

--- a/package.json
+++ b/package.json
@@ -223,7 +223,7 @@
 			"editor/context": [
 				{
 					"submenu": "sourcery.editor",
-					"group": "z_commands@2"
+					"group": "1_modification@2"
 				}
 			],
 			"explorer/context": [
@@ -234,7 +234,7 @@
 			],
 			"sourcery.editor": [
 				{
-					"command": "sourcery.rule.create",
+					"command": "sourcery.scan.open",
 					"title": "Create Sourcery rule with this pattern",
 					"when": "editorLangId==python && editorHasSelection"
 				}
@@ -270,6 +270,10 @@
 				},
 				{
 					"command": "sourcery.scan.toggleAdvanced",
+					"when": "false"
+				},
+				{
+					"command": "sourcery.rule.create",
 					"when": "false"
 				}
 			]
