--- a/package.json
+++ b/package.json
@@ -153,6 +153,11 @@
 				"category": "Sourcery"
 			},
 			{
+				"command": "sourcery.login.choose",
+				"title": "Login Choose",
+				"category": "Sourcery"
+			},
+			{
 				"command": "sourcery.hub.start",
 				"title": "Open Sourcery Hub",
 				"category": "Sourcery"
@@ -331,8 +336,7 @@
 				"sourcery.token": {
 					"type": "string",
 					"default": "",
-					"description": "Sourcery token. You can find your token at https://sourcery.ai/dashboard",
-					"markdownDeprecationMessage": "Run the `Sourcery: Login` command instead"
+					"description": "Sourcery token. You can find your token at https://sourcery.ai/dashboard"
 				},
 				"sourcery.ruleType.refactorings": {
 					"type": "boolean",
