--- a/package.json
+++ b/package.json
@@ -378,6 +378,7 @@
 		"eslint": "^8.36.0",
 		"mocha": "^10.2.0",
 		"ovsx": "^0.8.0",
+		"prettier": "^2.8.8",
 		"typescript": "^4.9.5",
 		"version-bump-prompt": "^6.1.0",
 		"vscode-test": "^1.6.1"
