--- a/package.json
+++ b/package.json
@@ -366,7 +366,9 @@
 		"vscode:uninstall": "node ./out/uninstall",
 		"compile": "tsc -watch -p ./",
 		"vscode": "npm run vscode:prepublish && VSCODE=$(which code-insiders || which code || echo echo ERROR: neither the code nor code-insiders vscode executable is installed); USER=dummy-dont-share-vscode-instance \"$VSCODE\" --user-data-dir=$PWD/.vscode-dev/user-data --verbose --extensionHomePath=$PWD/.vscode-dev/extensions --extensionDevelopmentPath=$PWD $*",
-		"vscode_local": "SOURCERY_EXECUTABLE=../core/run-sourcery.sh yarn run vscode"
+		"vscode_local": "SOURCERY_EXECUTABLE=../core/run-sourcery.sh yarn run vscode",
+		"format": "prettier --write .",
+  		"lint:format": "prettier --check ."
 	},
 	"devDependencies": {
 		"@types/mocha": "^10.0.1",
@@ -378,6 +380,7 @@
 		"eslint": "^8.36.0",
 		"mocha": "^10.2.0",
 		"ovsx": "^0.8.0",
+		"prettier": "^2.7.1",
 		"typescript": "^4.9.5",
 		"version-bump-prompt": "^6.1.0",
 		"vscode-test": "^1.6.1"
