--- a/package.json
+++ b/package.json
@@ -52,6 +52,14 @@
 		"views": {
 			"sourcery-explorer": [
 				{
+					"id": "sourcery.chat",
+					"name": "Chat",
+					"type": "webview",
+					"icon": "sourcery-icon.png",
+					"contextualTitle": "Chat",
+					"when": "sourcery.features.code_understanding"
+				},
+				{
 					"id": "sourcery.rules",
 					"name": "Rules",
 					"type": "webview",
@@ -209,6 +217,11 @@
 				"category": "Sourcery"
 			},
 			{
+				"command": "sourcery.chat.clearChat",
+				"title": "Clear",
+				"category": "Sourcery"
+			},
+			{
 				"command": "sourcery.scan.selectLanguage",
 				"title": "Select Language",
 				"category": "Sourcery"
@@ -249,6 +262,11 @@
 				{
 					"command": "sourcery.scan.toggleAdvanced",
 					"when": "view == sourcery.rules",
+					"group": "navigation"
+				},
+				{
+					"command": "sourcery.chat.clearChat",
+					"when": "view == sourcery.chat",
 					"group": "navigation"
 				}
 			],
@@ -313,6 +331,10 @@
 				},
 				{
 					"command": "sourcery.scan.toggleAdvanced",
+					"when": "false"
+				},
+				{
+					"command": "sourcery.chat.clearChat",
 					"when": "false"
 				},
 				{
