--- a/package.json
+++ b/package.json
@@ -418,6 +418,7 @@
 	},
 	"dependencies": {
 		"highlight.js": "^11.8.0",
+		"isomorphic-dompurify": "^1.6.0",
 		"marked": "^5.1.0",
 		"marked-highlight": "^2.0.1",
 		"vscode-languageclient": "^8.1.0"
