--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -18,7 +18,7 @@ jobs:
 
     - uses: actions/setup-node@v3
       with:
-        node-version: '14'
+        node-version: latest
 
     - run: yarn install --frozen-lockfile
 
@@ -26,11 +26,11 @@ jobs:
       run: |
         ./download-binaries.sh ${{ github.event.inputs.version }}
 
-    - name: Update version number
-      run: yarn run bump ${{ github.event.inputs.version }}
-
     - name: Package VSCode extension
       run: yarn run vsce package
+
+    - name: Rename packaged VSIX file
+      run: mv sourcery-*.vsix sourcery-${{ github.event.inputs.version }}.vsix
 
     - name: Upload archive
       uses: actions/upload-artifact@v3
@@ -54,6 +54,7 @@ jobs:
       with:
         status: ${{ job.status }}
         text: Publish VS Code extension pre-release v${{ github.event.inputs.version }} - ${{ job.status }}
+        fields: repo,commit,workflow,job
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_RELEASES_WEBHOOK_URL }}
       if: always()
