target a later version of ES, switch to an allowlist for vscodeignore

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,12 +1,14 @@
-**/*.ts
-**/tsconfig.json
-.gitignore
-.idea/**
-.vscode/**
-.vscode-dev/**
-yarn.lock
-.git/**
-.pytest_cache/**
-assets/**
-node_modules
-src/
+
+*
+*/**
+**/.DS_Store
+!sourcery_binaries/**
+!out/**
+!package.json
+!sourcery-icon.png
+!welcome-to-sourcery.py
+!README.md
+!LICENSE
+!media/**
+!src/webview/**
+!walkthrough/**
