--- a/package.json
+++ b/package.json
@@ -91,6 +91,17 @@
 				"when": "workspacePlatform != webworker",
 				"steps": [
 					{
+						"id": "sourcery.login",
+						"title": "Login",
+						"description": "Unlock all of Sourcery's features, including 14 a day trial of Sourcery Pro\n[Login](command:sourcery.login)",
+						"media": {
+							"markdown": "walkthrough/login.md"
+						},
+						"completionEvents": [
+							"onContext:sourcery.is_authenticated"
+						]
+					},					
+					{
 						"id": "sourcery.openWelcomeFile",
 						"title": "Get your first recommendation",
 						"description": "Get started by opening our tutorial \n[Open tutorial](command:toSide:sourcery.welcome.open)\n Put the cursor over the underlined code to see the refactoring suggestion. \n You can see all Sourcery's recommendations in the [Problems Pane](command:workbench.actions.view.problems)",
@@ -130,17 +141,6 @@
 						"media": {
 							"markdown": "walkthrough/custom_rules_tutorial.md"
 						}
-					},
-					{
-						"id": "sourcery.login",
-						"title": "Login",
-						"description": "Unlock all of Sourcery's features, including 30 days of Sourcery Pro\n[Login](command:sourcery.login)",
-						"media": {
-							"markdown": "walkthrough/login.md"
-						},
-						"completionEvents": [
-							"onContext:sourcery.is_authenticated"
-						]
 					},
 					{
 						"id": "sourcery.advancedFeatures",
