--- a/package.json
+++ b/package.json
@@ -60,6 +60,14 @@
 					"when": "sourcery.features.coding_assistant"
 				},
 				{
+					"id": "sourcery.troubleshooting",
+					"name": "Troubleshooting",
+					"type": "webview",
+					"icon": "sourcery-icon.png",
+					"contextualTitle": "Troubleshooting",
+					"when": "sourcery.features.coding_assistant"
+				},
+				{
 					"id": "sourcery.recipes",
 					"name": "Recipes",
 					"type": "webview",
@@ -454,6 +462,7 @@
 	"scripts": {
 		"vscode:uninstall": "node ./out/uninstall",
 		"compile": "tsc -watch -p ./",
+		"compile-webviews": "tsc -watch ./src/webview/*.ts",
 		"vscode": "npm run vscode:prepublish && VSCODE=$(which code-insiders || which code || echo echo ERROR: neither the code nor code-insiders vscode executable is installed); USER=dummy-dont-share-vscode-instance \"$VSCODE\" --user-data-dir=$PWD/.vscode-dev/user-data --verbose --extensionHomePath=$PWD/.vscode-dev/extensions --extensionDevelopmentPath=$PWD $*",
 		"vscode_local": "SOURCERY_EXECUTABLE=../core/run-sourcery.sh yarn run vscode",
 		"format": "prettier --write .",
