--- a/package.json
+++ b/package.json
@@ -251,6 +251,11 @@
 				"category": "Sourcery"
 			},
 			{
+				"command": "sourcery.troubleshoot.reset",
+				"title": "Reset",
+				"category": "Sourcery"
+			},
+			{
 				"command": "sourcery.chat.ask",
 				"title": "Ask Sourcery",
 				"category": "Sourcery"
@@ -311,6 +316,11 @@
 				{
 					"command": "sourcery.chat.clearCodeReview",
 					"when": "view == sourcery.code_review",
+					"group": "navigation"
+				},
+				{
+					"command": "sourcery.troubleshoot.reset",
+					"when": "view == sourcery.troubleshooting",
 					"group": "navigation"
 				}
 			],
