fix: Correct coding assistant view when clauses

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
 					"type": "webview",
 					"icon": "sourcery-icon.png",
 					"contextualTitle": "Coding Assistant",
-					"when": "sourcery.features.coding_assistant && !sourcery.config.coding_assistant.enabled"
+					"when": "sourcery.coding_assistant.needs-opt-in"
 				},
 				{
 					"id": "sourcery.chat",
@@ -65,7 +65,7 @@
 					"type": "webview",
 					"icon": "sourcery-icon.png",
 					"contextualTitle": "Coding Assistant",
-					"when": "sourcery.features.coding_assistant && sourcery.config.coding_assistant.enabled === true"
+					"when": "sourcery.features.coding_assistant"
 				},
 				{
 					"id": "sourcery.troubleshooting",
@@ -73,7 +73,7 @@
 					"type": "webview",
 					"icon": "sourcery-icon.png",
 					"contextualTitle": "Troubleshooting",
-					"when": "sourcery.features.coding_assistant && sourcery.config.coding_assistant.enabled === true && sourcery.features.coding_assistant_troubleshooting && sourcery.features.semantic_search"
+					"when": "sourcery.features.coding_assistant_troubleshooting"
 				},
 				{
 					"id": "sourcery.recipes",
@@ -81,7 +81,7 @@
 					"type": "webview",
 					"icon": "sourcery-icon.png",
 					"contextualTitle": "Recipes",
-					"when": "sourcery.features.coding_assistant && sourcery.config.coding_assistant.enabled === true"
+					"when": "sourcery.features.coding_assistant"
 				},
 				{
 					"id": "sourcery.code_review",
@@ -89,7 +89,7 @@
 					"type": "webview",
 					"icon": "sourcery-icon.png",
 					"contextualTitle": "Code Review",
-					"when": "sourcery.features.coding_assistant && sourcery.config.coding_assistant.enabled === true && sourcery.features.code_review"
+					"when": "sourcery.features.code_review"
 				},
 				{
 					"id": "sourcery.rules",
